# nanoGPT

./: .gitignore  model.py  pyproject.toml  train.py
