[tool.poetry]
name = "nanogpt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.1"
requests = "^2.28.1"
matplotlib = "^3.6.2"
wandb = "^0.13.7"
tiktoken = "^0.1.2"
tqdm = "^4.64.1"
datasets = "^2.8.0"
torch = {version = "^2.0.0.dev20230109+cpu", source = "torch"}

[tool.poetry.dev-dependencies]


[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/nightly/cpu"
default = false
secondary = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
